--- a/index.html
+++ b/index.html
@@ -33,40 +33,40 @@
         <a id="portfolio"><h4 class="section-title">Portfolio</h4></a>
         <div class="container"></div>
             <div class="col">
-                <img class="image" src="images\portfolio-1.png" alt="Website">
+                <img class="image" src="images/portfolio-1.png" alt="Website">
                 <h3>Marketing Page</h3>
                 <p>This project shows the font page of a marketing website meant for a specific business I'm interested in.</p>
                 
             </div>
             <div class="col col-b second-col">
-                <img class="image" src="images\portfolio-2.png" alt="Searchbar">
+                <img class="image" src="images/portfolio-2.png" alt="Searchbar">
                 <h3>Search Page</h3>
                 <p>This project searches through a specific database to find information that the user is trying to look up.</p>
             </div>
             <div class="col third-col">
-                <img class="image" src="images\portfolio-3.png" alt="Travel App">
+                <img class="image" src="images/portfolio-3.png" alt="Travel App">
                 <h3>Travel App</h3>
                 <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
             </div>
             <div class="col col-b">
-                <img class="image" src="images\portfolio-4.png" alt="Street Map">
+                <img class="image" src="images/portfolio-4.png" alt="Street Map">
                 <h3>Map of Favorite Spots</h3>
                 <p>This project uses mapping to apis plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
             </div>
             <div class="col second-col">
-                <img class="image" src="images\portfolio-5.png" alt="Photo Gallery">
+                <img class="image" src="images/portfolio-5.png" alt="Photo Gallery">
                 <h3>Photo Gallery</h3>
                 <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photots.</p>
             </div>
             <div class="col col-b third-col">
-                <img class="image" src="images\portfolio-6.png" alt="Calculator">
+                <img class="image" src="images/portfolio-6.png" alt="Calculator">
                 <h3>Calculator</h3>
                 <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
             </div>
         </div>
-    </div>
+
     <div class="skills section-title">
-        <a id="skills"></a><h4>Skills</h4></a>
+        <a id="skills"><h4>Skills</h4></a>
         <ul>
             <li>Javascript</li>
             <li>HTML</li>
@@ -75,8 +75,8 @@
     </div>
 
     <div class="contact">
-        <a id="contact"></a><p class="section-title clearfix">Contact</p></a>
-        <p cl>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
+        <a id="contact"><p class="section-title clearfix">Contact</p></a>
+        <p>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
         <p>Phone &nbsp; <b>+1(111)555-1234</b></p>
         <p>Email &nbsp; <b>email@yoursite.com</b></p>
     </div>
